# SPAIC

./: .gitignore  .readthedocs.yaml  Makefile  README.md  README_cn.md  main.py  requirements.txt  setup.cfg  setup.py
docs/source/: SPAIC.rst  SPAIC.spaic.IO.rst  SPAIC.spaic.Learning.rst  SPAIC.spaic.Library.rst  SPAIC.spaic.Monitor.rst  SPAIC.spaic.Network.rst  SPAIC.spaic.Neuron.rst  SPAIC.spaic.Simulation.rst  SPAIC.spaic.UI.rst  SPAIC.spaic.rst  backend.rst  backend_en.rst  conf.py  index.rst  index_en.rst  input_output.rst  input_output_en.rst  modules_en.rst  monitor.rst  monitor_en.rst  operators.rst  save_model.rst  save_model_en.rst  simulator.rst  spaic.IO.rst  spaic.Learning.rst  spaic.Library.rst  spaic.Monitor.rst  spaic.Network.rst  spaic.Neuron.rst  spaic.Simulation.rst  spaic.UI.rst
spaic/: __init__.py
spaic/Backend/: Backend.py  Builder.py  Torch_Backend.py  __init__.py
spaic/Example/: Assembly_Example.py  Conv_test_main.py  Example.py  Resnet_cifar10.py  Stdp_test_main.py  TIDIGITS_test_main.py  eth_mnist_int.py  evaluation_utils.py  image.pt  input.pt  mnist_network_save_load.py  plot_utils.py  test_Speech.py  test_main.py  test_wavefronts.py  w.pt  w_temp.pt
spaic/IO/: Dataloader.py  Dataset.py  Environment.py  Initializer.py  Pipeline.py  SignalGenerator.py  __init__.py  sampler.py  utils.py
spaic/Learning/: Backprop_RSTDP.py  BioHashSTDP_Learner.py  Conv_RSTDP.py  Conv_STDP.py  FiniteDifference.py  Learner.py  RSTDP.py  Rate_Modulation.py  STBP_Learner.py  STCA_Learner.py  STDP_Learner.py  SpikeProp_Learner.py  SurrogateBP_Learner.py  (+4 more)
(+60 files in other folders)
