[metadata]
name = SPAIC
version = attr: spaic.__version__
description = The spaic platform simulation training platform is a network construction, forward simulation and learning training platform developed for spiking neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
author = zjlab
author_email = hongchf@zhejianglab.com
maintainer = hongchaofei
maintainer_email = hongchf@zhejianglab.com
url = https://github.com/ZhejianglabNCRC/SPAIC/
license = Apache-2.0 license
project_urls =
    Documentation = https://spaic.readthedocs.io/
    Source Code = https://github.com/ZhejianglabNCRC/SPAIC
    Issue Tracker = https://github.com/ZhejianglabNCRC/SPAIC/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = False
python_requires = >=3.6
# Dependencies are in setup.py for GitHub